# SumerianApp

./: demo_app.py  playground_transliteration.py  pyproject.toml
