[project]
name = "sumerian-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "einops>=0.8.2",
    "gradio>=6.14.0",
    "protobuf>=7.34.1",
    "sentencepiece>=0.2.1",
    "torch>=2.12.0",
    "torchvision>=0.27.0",
    "transformers>=4.45.1,<5.0.0",
]

authors = [
    {name = "Maxim Partin", email = "max.physmath.05@gmail.com"},
    {name = "Michael Gadiev", email = "migadiev@edu.hse.ru"}
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple"
default = true

[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"

[dependency-groups]
dev = [
    "ruff>=0.15.12",
]

[tool.ruff]
exclude = [
    "ocr_model_weights",
    "translator_model_weights",
]
